fixed alignment of section title on small width devices

--- a/css/mobile-nav.css
+++ b/css/mobile-nav.css
@@ -112,7 +112,7 @@ Mobile Nav
   display: inline-block;
   width: 20px;
   height: 20px;
-  margin: 14px;
+  margin: 15px;
   background-color: transparent;
   border: none;
   cursor: pointer;
