--- a/css/smallscreen.css
+++ b/css/smallscreen.css
@@ -55,7 +55,8 @@ body{
     font-weight: 700;
     letter-spacing: -3px;
     word-spacing: 7px;
-    padding: 0!important;
+    padding: 0;
+    padding-top: 1.7%;
     vertical-align: middle;
     z-index: 250;
     position: -webkit-sticky;
