--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,7 @@ Animations
 Content
 ---------------*/
 #content{
-    display: none;
+    /*display: none;*/
 }
 .section{
     margin-left: auto;
@@ -230,7 +230,7 @@ Skills
     display: none;
 }
 
-.logo svg, .logo img{
+.logo img{
     width: 50px;
     height: auto;
     margin-right: 2%;
